<resources>
    <string name="app_name">ViewTrianEx</string>
    <string name="listview_name">ListView</string>
    <string name="spinner_name">Spinner</string>
    <string name="autotextview_name">AutoTextView</string>
    <string name="flipper_name">ViewFlipper</string>
    <string name="webview_name">Web</string>
    <string name="grid_icon_name">GridVewIcon</string>
    <string name="btn_grid_icon">GridView</string>
    <string name="btn_listview">ListView</string>
    <string name="spinner_one_title">请选择您的段位</string>
    <string name="spinner_two_title">请选择您的英雄</string>
    <string name="spinner_one_des">英雄列表</string>
    <string name="btn_spinner">Spinner</string>
    <string name="btn_txview">AutoTxView</string>
    <string name="btn_flipper">ViewFilpper</string>
    <string name="btn_webview">WebView</string>
    <string name="btn_sqlite">SQLite</string>
    <string name="btn_recycle_view">RecycleView</string>
    <string name="detail_view">DetailView</string>
    <item name="Tag_APP" type="id"></item>
    <item name="Tag_BOOK" type="id"></item>


    <!-- API GUIDE -->
    <!-- RelativeLayout -->
    <string name="reminder">Reminder Name</string>
    <string name="done">Done</string>

    <!-- LinearLayout -->
    <string name="to">TO</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
</resources>
